# sherpa

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DETTE-TECHNIQUE.md  Makefile  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  docker-compose.yml  offre.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_study_events.py  0002_create_chunk_meta.py
app/: __init__.py  config.py  main.py
app/application/agents/: base.py  diagnoser.py  intent.py  planner.py  prompts.py  quiz.py
app/application/ingestion/: chunker.py  loaders.py
app/application/rag/: prompts.py  service.py
app/domain/: agents.py  content.py  entities.py  exceptions.py  memory.py  ports.py
app/infrastructure/cache/: in_memory.py  redis.py
app/infrastructure/embeddings/: caching.py  voyage.py
app/infrastructure/llm/: anthropic.py  caching.py  echo.py  resilient.py
app/infrastructure/observability/: logging.py  metrics.py
app/infrastructure/orchestration/: assistant.py
app/infrastructure/persistence/: engine.py  (+5 more)
app/presentation/: api.py  dependencies.py  middleware.py  schemas.py  schemas_agents.py  schemas_courses.py  schemas_memory.py  security.py
docker/: Dockerfile
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  COST.md  DATA_PRIVACY.md  DEPLOYMENT.md  EVALS.md  FAQ.md  GLOSSARY.md  OBSERVABILITY.md  ONBOARDING.md  PERFORMANCE.md  RAG_DESIGN.md  README.md  RELEASE.md  RUNBOOK.md  TESTING.md  THREAT_MODEL.md
docs/adr/: 0001-record-architecture-decisions.md  0002-clean-architecture-and-ports.md  0003-vector-store-qdrant.md  0004-llm-routing-claude.md
evals/: dataset.py  judge.py  judge_run.py  run.py
infra/: cloudrun.yaml
scripts/: smoke_test.py
tests/: conftest.py  test_agents.py  test_api.py  test_api_agents.py  test_api_assistant.py  test_api_courses.py  test_api_memory.py  test_api_security.py  test_cache.py  test_caching_embedding.py  test_caching_llm.py  test_chunk_metadata.py  test_chunker.py  test_dependencies.py  test_embedding_adapters.py  test_eval_judge.py  test_fusion.py  test_hybrid.py  test_intent.py  test_llm_adapters.py  test_loaders.py  test_memory.py  test_observability.py  test_orchestrator.py  test_qdrant_mapping.py  test_quota.py  test_rag_service.py  test_ratelimit.py  test_resilience.py  test_retriever.py  test_web.py
(+18 files in other folders)
