[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sherpa"
version = "0.1.0"
description = "Sherpa — Tuteur IA pour la préparation d'examens (RAG + agents, production-grade)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sherpa Team" }]
keywords = ["rag", "llm", "agents", "education", "genai"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
]

[project.optional-dependencies]
rag = [
    "anthropic>=0.40",
    "voyageai>=0.3",
    "qdrant-client>=1.12",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.24",
]
data = [
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
]
observability = [
    "prometheus-client>=0.21",
    "langfuse>=2.53",
]
agents = [
    "langgraph>=0.2",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "bandit>=1.8",
    "types-redis>=4.6",
    "langgraph>=0.2",
]

[project.urls]
Homepage = "https://github.com/your-org/sherpa"
Documentation = "https://github.com/your-org/sherpa/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests", "evals"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "voyageai.*",
    "anthropic.*",
    "langgraph.*",
    "rank_bm25.*",
    "fitz.*",
    "langfuse.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.bandit]
exclude_dirs = ["tests"]
